--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 
 
 .logo{
-    background-image: url("amazon_logo.png");
+    background-image: url("./Images/amazon_logo.png");
     background-size: cover;
     height: 50px;
     width: 100%;
@@ -132,7 +132,7 @@ font-weight: 700;
 }
 /* herosection */
 .hero-section{
-    background-image: url("hero_image.jpg");
+    background-image: url("./Images/hero_image.jpg");
     height: 350px;
     background-size: cover;
     display: flex;
@@ -223,7 +223,7 @@ ul a {
 }
 .logo{
     
-    background-image: url(amazon_logo.png);
+    background-image: url(./Images/amazon_logo.png);
     width: 100px;
 }
 
